Completed all methods within default_controller.py Fixed a mistake in the swagger api spec
